Fix caching of uploaded quick link images
Issue Mentioned in https://github.com/BookCatKid/tabliss-maintained/issues/3
I was using the wrong caching to cache the images, so if the image was too large it wouldn't fit in the available storage space and would error. I'm not sure if this has broken anything so...

--- a/src/plugins/widgets/links/Links.sass
+++ b/src/plugins/widgets/links/Links.sass
@@ -2,6 +2,10 @@
     column-gap: 1em
     display: inline-grid
 
+    .custom-icon, i
+        margin-right: 5px
+        margin-left: -2px
+    
     a
         display: block
         margin: 0.25em
